--- a/create_df.ipynb
+++ b/create_df.ipynb
@@ -226,29 +226,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 216,
    "metadata": {
     "scrolled": false
    },
+   "outputs": [],
+   "source": [
+    "list_columns_subjects = list(df.columns)\n",
+    "list_columns_subjects.remove('tiempo')\n",
+    "\n",
+    "##list_columns_subjects=list_columns_subjects[70:84] ## para ir comprobando, una a una, que no haya espacios vacíos!\n",
+    "\n",
+    "frames=[]\n",
+    "\n",
+    "for subject in list_columns_subjects:\n",
+    "    #print(subject)\n",
+    "    dfs = df[['tiempo', subject]]\n",
+    "    dfs = dfs.loc[~pd.isna(dfs[subject])] # Quitar todos los NaN (qudarnos solo con los eventos)\n",
+    "    ####################################### Añadir una columna de segundos\n",
+    "    times_s=[]\n",
+    "    for i in range(0, len(dfs)):\n",
+    "        l = dfs.tiempo.iloc[i]\n",
+    "        times_s.append(  int(datetime.timedelta(hours=l.hour, minutes=l.minute, seconds=l.second).total_seconds()) )\n",
+    "    #\n",
+    "    dfs.columns=['tiempo', 'event']\n",
+    "    dfs['time_s'] = times_s\n",
+    "    ####################################### Añadir columna de subject y de truco\n",
+    "    dfs['trick'] = int(T.split(' ')[-1]) ## last character of the string is the number of the trick\n",
+    "    dfs['subject'] = int(re.findall('\\d+', subject)[0]) ##separate leter from number\n",
+    "    frames.append(dfs)\n",
+    "    \n",
+    "    \n",
+    "dfs=pd.concat(frames)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 218,
+   "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "33a\n",
-      "33b\n",
-      "34a\n",
-      "34b\n",
-      "35a\n",
-      "35b\n",
-      "36a\n",
-      "36b\n",
-      "37a\n",
-      "37b\n",
-      "38a\n",
-      "38b\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -279,60 +295,340 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>56</th>\n",
-       "      <td>00:01:52</td>\n",
-       "      <td>S</td>\n",
-       "      <td>112</td>\n",
+       "      <th>3</th>\n",
+       "      <td>00:00:06</td>\n",
+       "      <td>Se</td>\n",
+       "      <td>6</td>\n",
        "      <td>1</td>\n",
-       "      <td>38</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>00:00:10</td>\n",
+       "      <td>Si</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>00:00:12</td>\n",
+       "      <td>N</td>\n",
+       "      <td>12</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>00:00:32</td>\n",
+       "      <td>In</td>\n",
+       "      <td>32</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>00:01:02</td>\n",
+       "      <td>In</td>\n",
+       "      <td>62</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46</th>\n",
+       "      <td>00:01:32</td>\n",
+       "      <td>In</td>\n",
+       "      <td>92</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>54</th>\n",
+       "      <td>00:01:48</td>\n",
+       "      <td>L</td>\n",
+       "      <td>108</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>57</th>\n",
+       "      <td>00:01:54</td>\n",
+       "      <td>L</td>\n",
+       "      <td>114</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>61</th>\n",
        "      <td>00:02:02</td>\n",
-       "      <td>D</td>\n",
+       "      <td>N</td>\n",
        "      <td>122</td>\n",
        "      <td>1</td>\n",
-       "      <td>38</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>62</th>\n",
+       "      <td>00:02:04</td>\n",
+       "      <td>N*</td>\n",
+       "      <td>124</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>64</th>\n",
+       "      <td>00:02:08</td>\n",
+       "      <td>N</td>\n",
+       "      <td>128</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>68</th>\n",
+       "      <td>00:02:16</td>\n",
+       "      <td>L</td>\n",
+       "      <td>136</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>71</th>\n",
        "      <td>00:02:22</td>\n",
-       "      <td>L</td>\n",
+       "      <td>I</td>\n",
        "      <td>142</td>\n",
        "      <td>1</td>\n",
-       "      <td>38</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>82</th>\n",
-       "      <td>00:02:44</td>\n",
-       "      <td>S</td>\n",
-       "      <td>164</td>\n",
        "      <td>1</td>\n",
-       "      <td>38</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>89</th>\n",
-       "      <td>00:02:58</td>\n",
+       "      <th>74</th>\n",
+       "      <td>00:02:28</td>\n",
+       "      <td>N*</td>\n",
+       "      <td>148</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75</th>\n",
+       "      <td>00:02:30</td>\n",
        "      <td>L</td>\n",
-       "      <td>178</td>\n",
+       "      <td>150</td>\n",
        "      <td>1</td>\n",
-       "      <td>38</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>141</th>\n",
-       "      <td>00:04:42</td>\n",
+       "      <th>77</th>\n",
+       "      <td>00:02:34</td>\n",
+       "      <td>L*</td>\n",
+       "      <td>154</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>78</th>\n",
+       "      <td>00:02:36</td>\n",
+       "      <td>N</td>\n",
+       "      <td>156</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>90</th>\n",
+       "      <td>00:03:00</td>\n",
+       "      <td>L</td>\n",
+       "      <td>180</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>93</th>\n",
+       "      <td>00:03:06</td>\n",
+       "      <td>N</td>\n",
+       "      <td>186</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>100</th>\n",
+       "      <td>00:03:20</td>\n",
        "      <td>S</td>\n",
-       "      <td>282</td>\n",
+       "      <td>200</td>\n",
        "      <td>1</td>\n",
-       "      <td>38</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>160</th>\n",
-       "      <td>00:05:20</td>\n",
-       "      <td>D</td>\n",
-       "      <td>320</td>\n",
+       "      <th>114</th>\n",
+       "      <td>00:03:48</td>\n",
+       "      <td>In</td>\n",
+       "      <td>228</td>\n",
        "      <td>1</td>\n",
-       "      <td>38</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>115</th>\n",
+       "      <td>00:03:50</td>\n",
+       "      <td>a1</td>\n",
+       "      <td>230</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>136</th>\n",
+       "      <td>00:04:32</td>\n",
+       "      <td>In</td>\n",
+       "      <td>272</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>139</th>\n",
+       "      <td>00:04:38</td>\n",
+       "      <td>F</td>\n",
+       "      <td>278</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>140</th>\n",
+       "      <td>00:04:40</td>\n",
+       "      <td>C</td>\n",
+       "      <td>280</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>142</th>\n",
+       "      <td>00:04:44</td>\n",
+       "      <td>S*</td>\n",
+       "      <td>284</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>143</th>\n",
+       "      <td>00:04:46</td>\n",
+       "      <td>Se</td>\n",
+       "      <td>286</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>158</th>\n",
+       "      <td>00:05:16</td>\n",
+       "      <td>In</td>\n",
+       "      <td>316</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>173</th>\n",
+       "      <td>00:05:46</td>\n",
+       "      <td>In</td>\n",
+       "      <td>346</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>179</th>\n",
+       "      <td>00:05:58</td>\n",
+       "      <td>S</td>\n",
+       "      <td>358</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>180</th>\n",
+       "      <td>00:06:00</td>\n",
+       "      <td>L</td>\n",
+       "      <td>360</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>189</th>\n",
+       "      <td>00:06:18</td>\n",
+       "      <td>S</td>\n",
+       "      <td>378</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>57</th>\n",
+       "      <td>00:01:54</td>\n",
+       "      <td>N*</td>\n",
+       "      <td>114</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>71</th>\n",
+       "      <td>00:02:22</td>\n",
+       "      <td>S</td>\n",
+       "      <td>142</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>78</th>\n",
+       "      <td>00:02:36</td>\n",
+       "      <td>S</td>\n",
+       "      <td>156</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>90</th>\n",
+       "      <td>00:03:00</td>\n",
+       "      <td>N*</td>\n",
+       "      <td>180</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>93</th>\n",
+       "      <td>00:03:06</td>\n",
+       "      <td>L*</td>\n",
+       "      <td>186</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>114</th>\n",
+       "      <td>00:03:48</td>\n",
+       "      <td>N*</td>\n",
+       "      <td>228</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>115</th>\n",
+       "      <td>00:03:50</td>\n",
+       "      <td>S</td>\n",
+       "      <td>230</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>136</th>\n",
+       "      <td>00:04:32</td>\n",
+       "      <td>S</td>\n",
+       "      <td>272</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>143</th>\n",
+       "      <td>00:04:46</td>\n",
+       "      <td>N</td>\n",
+       "      <td>286</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>190</th>\n",
+       "      <td>00:06:20</td>\n",
+       "      <td>A8</td>\n",
+       "      <td>380</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -340,52 +636,59 @@
       ],
       "text/plain": [
        "       tiempo event  time_s  trick  subject\n",
-       "56   00:01:52     S     112      1       38\n",
-       "61   00:02:02     D     122      1       38\n",
-       "71   00:02:22     L     142      1       38\n",
-       "82   00:02:44     S     164      1       38\n",
-       "89   00:02:58     L     178      1       38\n",
-       "141  00:04:42     S     282      1       38\n",
-       "160  00:05:20     D     320      1       38"
+       "3    00:00:06    Se       6      1        1\n",
+       "5    00:00:10   Si       10      1        1\n",
+       "6    00:00:12     N      12      1        1\n",
+       "16   00:00:32    In      32      1        1\n",
+       "31   00:01:02    In      62      1        1\n",
+       "46   00:01:32    In      92      1        1\n",
+       "54   00:01:48     L     108      1        1\n",
+       "57   00:01:54     L     114      1        1\n",
+       "61   00:02:02     N     122      1        1\n",
+       "62   00:02:04    N*     124      1        1\n",
+       "64   00:02:08     N     128      1        1\n",
+       "68   00:02:16     L     136      1        1\n",
+       "71   00:02:22     I     142      1        1\n",
+       "74   00:02:28    N*     148      1        1\n",
+       "75   00:02:30     L     150      1        1\n",
+       "77   00:02:34    L*     154      1        1\n",
+       "78   00:02:36     N     156      1        1\n",
+       "90   00:03:00     L     180      1        1\n",
+       "93   00:03:06     N     186      1        1\n",
+       "100  00:03:20     S     200      1        1\n",
+       "114  00:03:48    In     228      1        1\n",
+       "115  00:03:50    a1     230      1        1\n",
+       "136  00:04:32    In     272      1        1\n",
+       "139  00:04:38     F     278      1        1\n",
+       "140  00:04:40     C     280      1        1\n",
+       "142  00:04:44    S*     284      1        1\n",
+       "143  00:04:46    Se     286      1        1\n",
+       "158  00:05:16    In     316      1        1\n",
+       "173  00:05:46    In     346      1        1\n",
+       "179  00:05:58     S     358      1        1\n",
+       "180  00:06:00     L     360      1        1\n",
+       "189  00:06:18     S     378      1        1\n",
+       "57   00:01:54    N*     114      1        1\n",
+       "71   00:02:22     S     142      1        1\n",
+       "78   00:02:36     S     156      1        1\n",
+       "90   00:03:00    N*     180      1        1\n",
+       "93   00:03:06    L*     186      1        1\n",
+       "114  00:03:48    N*     228      1        1\n",
+       "115  00:03:50     S     230      1        1\n",
+       "136  00:04:32     S     272      1        1\n",
+       "143  00:04:46     N     286      1        1\n",
+       "190  00:06:20    A8     380      1        1"
       ]
      },
-     "execution_count": 215,
+     "execution_count": 218,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "list_columns_subjects = list(df.columns)\n",
-    "list_columns_subjects.remove('tiempo')\n",
-    "\n",
-    "list_columns_subjects=list_columns_subjects[70:84] ## para ir comprobando, una a una, que no haya espacios vacíos!\n",
-    "\n",
-    "for subject in list_columns_subjects:\n",
-    "    print(subject)\n",
-    "    dfs = df[['tiempo', subject]]\n",
-    "    dfs = dfs.loc[~pd.isna(dfs[subject])] # Quitar todos los NaN (qudarnos solo con los eventos)\n",
-    "    ####################################### Añadir una columna de segundos\n",
-    "    times_s=[]\n",
-    "    for i in range(0, len(dfs)):\n",
-    "        l = dfs.tiempo.iloc[i]\n",
-    "        times_s.append(  int(datetime.timedelta(hours=l.hour, minutes=l.minute, seconds=l.second).total_seconds()) )\n",
-    "    #\n",
-    "    dfs.columns=['tiempo', 'event']\n",
-    "    dfs['time_s'] = times_s\n",
-    "    ####################################### Añadir columna de subject y de truco\n",
-    "    dfs['trick'] = int(T.split(' ')[-1]) ## last character of the string is the number of the trick\n",
-    "    dfs['subject'] = int(re.findall('\\d+', subject)[0]) ##separate leter from number\n",
-    "    \n",
-    "    \n",
-    "dfs"
+    "df_x = dfs.loc[dfs['subject']==1]\n",
+    "df_x.sortby()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
