--- a/analysis_event_centered.ipynb
+++ b/analysis_event_centered.ipynb
@@ -725,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -737,13 +737,13 @@
     },
     {
      "ename": "NameError",
-     "evalue": "name 'idx' is not defined",
+     "evalue": "name 'str_dic' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-81-470c8db4bbf1>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     98\u001b[0m             \u001b[0mstr_dict\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlabels_responses\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m'___'\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mEVENT\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     99\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 100\u001b[1;33m             \u001b[1;32mif\u001b[0m \u001b[0midx\u001b[0m\u001b[1;33m==\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    101\u001b[0m                 \u001b[0mdynamics_\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mstr_dic\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m=\u001b[0m \u001b[0mdynamic\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    102\u001b[0m             \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'idx' is not defined"
+      "\u001b[1;32m<ipython-input-82-d86f2ddcb9ae>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     99\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    100\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mindx\u001b[0m\u001b[1;33m==\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 101\u001b[1;33m                 \u001b[0mdynamics_\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mstr_dic\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m=\u001b[0m \u001b[0mdynamic\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    102\u001b[0m             \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    103\u001b[0m                 \u001b[0mdynamics_shuff\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mstr_dic\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m=\u001b[0m \u001b[0mdynamic\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'str_dic' is not defined"
      ]
     }
    ],
@@ -848,9 +848,9 @@
     "            str_dict = labels_responses + '___' + EVENT\n",
     "            \n",
     "            if indx==0:\n",
-    "                dynamics_[str_dic]= dynamic\n",
+    "                dynamics_[str_dict]= dynamic\n",
     "            else:\n",
-    "                dynamics_shuff[str_dic]= dynamic"
+    "                dynamics_shuff[str_dict]= dynamic"
    ]
   },
   {
