--- a/analysis_event_centered.ipynb
+++ b/analysis_event_centered.ipynb
@@ -725,25 +725,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sonrisa Miniclimax\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'str_dic' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-82-d86f2ddcb9ae>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     99\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    100\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mindx\u001b[0m\u001b[1;33m==\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 101\u001b[1;33m                 \u001b[0mdynamics_\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mstr_dic\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m=\u001b[0m \u001b[0mdynamic\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    102\u001b[0m             \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    103\u001b[0m                 \u001b[0mdynamics_shuff\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mstr_dic\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m=\u001b[0m \u001b[0mdynamic\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'str_dic' is not defined"
+      "sonrisa Miniclimax\n",
+      "sonrisa Climax final\n",
+      "sonrisa gag\n",
+      "risa Miniclimax\n",
+      "risa Climax final\n",
+      "risa gag\n",
+      "aplauso Miniclimax\n",
+      "aplauso Climax final\n",
+      "aplauso gag\n"
      ]
     }
    ],
@@ -855,10 +852,65 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['sonrisa___Miniclimax', 'sonrisa___gag', 'risa___gag', 'risa___Climax final', 'sonrisa___Climax final', 'aplauso___gag', 'risa___Miniclimax', 'aplauso___Miniclimax', 'aplauso___Climax final'])"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dynamics_.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\David\\Anaconda3\\envs\\python3\\lib\\site-packages\\scipy\\stats\\stats.py:1713: FutureWarning: Using a non-tuple sequence for multidimensional indexing is deprecated; use `arr[tuple(seq)]` instead of `arr[seq]`. In the future this will be interpreted as an array index, `arr[np.array(seq)]`, which will result either in an error or a different result.\n",
+      "  return np.add.reduce(sorted[indexer] * weights, axis=axis) / sumval\n"
+     ]
+    }
+   ],
+   "source": [
+    "sns.lineplot('times_centered', 'action', estimator=np.sum, data=dynamics_['aplauso___Miniclimax'], color='darkgreen', label='applause')\n",
+    "sns.lineplot('times_centered', 'action', estimator=np.sum, data=dynamics_shuff['aplauso___Miniclimax'], color='grey', label='shuff')\n",
+    "ylim=20\n",
+    "plt.plot([0,0], [0, ylim-0.25*ylim], '--k', linewidth=1)\n",
+    "plt.gca().spines['right'].set_visible(False)  # aesthetics                                                                              # remove right spines\n",
+    "plt.gca().spines['top'].set_visible(False)  \n",
+    "plt.gca().get_yaxis().tick_left()\n",
+    "plt.gca().tick_params('y', direction='in') #direction\n",
+    "plt.gca().tick_params('x', direction='out') #direction\n",
+    "plt.xlim(-45,45)\n",
+    "plt.xticks([-45, -30, -15, 0, 15, 30, 45])\n",
+    "plt.ylim(0, ylim)\n",
+    "plt.yticks([0,  ylim/2, ylim])\n",
+    "plt.ylabel('counts (rescaled)')\n",
+    "plt.xlabel('time (s)')\n",
+    "plt.legend(loc=1, frameon=False, prop={'size': 18})\n",
+    "plt.title('Miniclimax')\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "code",
